--- a/README.adoc
+++ b/README.adoc
@@ -345,7 +345,15 @@ Properties that are not defined as part of the {url-openapi-spec}[OpenAPI specif
           "request-parameters": "```GET /pets\nhost: host.com\nAccept: application/xml```",
           "response-parameters": "```HTTP/1.1 200 OK\nContent-Type: application/xml```",
           "example-response": "```xml<elem>...</elem>```",
-          "example-error-response": "```xml<elem>...</elem>```"
+          "example-error-response": "```xml<elem>...</elem>```",
+          "rates": [
+            {
+              "rateLimit":2,
+              "rateWindow":7,
+              "rateUnit":"MINUTES",
+              "description":"Two requests in seven minutes."
+            }
+          ]
         }
       }
     }
