--- a/README.adoc
+++ b/README.adoc
@@ -342,6 +342,7 @@ Properties that are not defined as part of the {url-openapi-spec}[OpenAPI specif
           "roles": ["roleA", "roleB"],
           "auth-methods": ["HTTP Signatures", "Bearer"],
           "api-versions": "0.1",
+          "endpoint-protocol": "https",
           "request-parameters": "```GET /pets\nhost: host.com\nAccept: application/xml```",
           "response-parameters": "```HTTP/1.1 200 OK\nContent-Type: application/xml```",
           "example-response": "```xml<elem>...</elem>```",
