--- a/README.adoc
+++ b/README.adoc
@@ -9,7 +9,7 @@ Tribestream API Registry
 To build and run the registry in its own TomEE instance:
 
 ----
-$ mvn clean compile tomee-embedded:run -pl :tribestream-api-registry-webapp
+$ mvn clean package -DskipTests tomee-embedded:run -pl :tribestream-api-registry-webapp
 ----
 
 To make TomEE pick up changes to any static resources, typescript files, templates or style sheets:
@@ -19,12 +19,14 @@ $ cd tribestream-api-registry-webapp
 $ mvn frontend:npm@dev
 ----
 
-Note that you need elasticsearch, to run it:
+Note that you can run elasticsearch with the dedicated plugin:
 
 [source]
 ----
 cd tribestream-api-registry-webapp && mvn elasticsearch:run
 ----
+
+If you do so, ensure to skip the automatically launched one adding as system property: `-Ddev.elasticsearch=skip`.
 
 == API
 
