--- a/README.adoc
+++ b/README.adoc
@@ -55,11 +55,42 @@ GET http://localhost:8080/registry/api/application/253a25ec-7c2c-4ca5-88f6-9cd11
 <1> The paths are reduced so that the operations only contain the properties `summary` and `description`
     All other properties of an endpoint must be retrieved via the endpoint below.
 
-Links are communicated via the HTTP Link header:
+Links are communicated in the vendor extension `x-tribestream-api-registry`:
 
 ----
 Link: <http://localhost:8080/registry/api/application/253a25ec-7c2c-4ca5-88f6-9cd115733f7c>;rel="self"
 Link: <http://localhost:8080/registry/api/application/253a25ec-7c2c-4ca5-88f6-9cd115733f7c/endpoint/f27efad1-a6a2-4066-af4e-b50a0194f46a>;rel="GET /pets"
+{
+  "swagger":{
+    "swagger":"2.0",
+    "paths": {
+      "/pets/{id}": {
+        "get": {
+          "description": "..." <1>
+      }
+    },
+    "x-tribestream-api-registry": {
+      "links": [
+        {
+          "rel": "self",
+          "href": "http://localhost:8080/registry/api/application/6f80ede5-5cd9-4c5a-aeb7-5cb3fb57f863"
+        },
+        {
+          "rel": "history",
+          "href": "http://localhost:8080/registry/api/history/application/6f80ede5-5cd9-4c5a-aeb7-5cb3fb57f863"
+        },
+        {
+          "rel": "endpoints",
+          "href": "http://localhost:8080/registry/api/application/6f80ede5-5cd9-4c5a-aeb7-5cb3fb57f863/endpoint"
+        },
+        {
+          "rel": "GET /pets/{id}",
+          "href": "http://localhost:8080/registry/api/application/6f80ede5-5cd9-4c5a-aeb7-5cb3fb57f863/endpoint/28631ade-1baf-4013-9e9e-86e48874315f"
+        }
+      ]
+    }
+  }
+}
 ----
 
 Get an endpoint of an application:
@@ -68,7 +99,6 @@ Get an endpoint of an application:
 GET http://localhost:8080/registry/api/application/{applicationId}/endpoint/{endpointId}
 ----
 
-The first request is used if the requested endpoint uses the root path `/`
 
 [source,json]
 ----
@@ -84,11 +114,35 @@ The first request is used if the requested endpoint uses the root path `/`
 }
 ----
 
-Links for the endpoint poin to the endpoint itself and the application:
+Links for the endpoint point to the endpoint itself, its history and the application:
 
 ----
-Link: <http://localhost:8080/registry/api/application/253a25ec-7c2c-4ca5-88f6-9cd115733f7c>;rel="application"
-Link: <http://localhost:8080/registry/api/application/253a25ec-7c2c-4ca5-88f6-9cd115733f7c/endpoint/f27efad1-a6a2-4066-af4e-b50a0194f46a>;rel="self"
+{
+  "httpMethod":"get",
+  "path":"/workNotifications/{region}/{function}",
+  "operation":{
+    "description":"....",
+    "consumes":["application/xml"],
+    "produces":["application/xml"],
+    ...
+    "x-tribestream-api-registry": {
+      "links": [
+        {
+          "rel": "self",
+          "href": "http://localhost:8080/registry/api/application/6f80ede5-5cd9-4c5a-aeb7-5cb3fb57f863/endpoint/28631ade-1baf-4013-9e9e-86e48874315f"
+        },
+        {
+          "rel": "history",
+          "href": "http://localhost:8080/registry/api/history/application/6f80ede5-5cd9-4c5a-aeb7-5cb3fb57f863/endpoint/28631ade-1baf-4013-9e9e-86e48874315f"
+        },
+        {
+          "rel": "application",
+          "href": "http://localhost:8080/registry/api/application/6f80ede5-5cd9-4c5a-aeb7-5cb3fb57f863"
+        }
+      ]
+    }
+  }
+}
 ----
 
 Import an application:
@@ -126,12 +180,7 @@ POST http://localhost:8080/registry/api/application/
 <1> The paths are reduced so that the operations only contain the properties `summary` and `description`
     All other properties of an endpoint must be retrieved via the endpoint below.
 
-The link for the new application is also communicated via the Link HTTP header:
-
-----
-Link: <http://localhost:8080/registry/api/application/253a25ec-7c2c-4ca5-88f6-9cd115733f7c>;rel="self"
-Link: <http://localhost:8080/registry/api/application/253a25ec-7c2c-4ca5-88f6-9cd115733f7c/endpoint/656a64ec-1aa1-46325-8765-9cd115733f7c>;rel="GET /pets/{id}"
-----
+The link for the new application is also communicated in the vendor extension.
 
 Update an application:
 
@@ -248,12 +297,6 @@ The response status will be HTTP 201
 }
 ----
 
-And the links will also be communicated as Link headers:
-
-----
-Link: <http://localhost:8080/registry/api/application/253a25ec-7c2c-4ca5-88f6-9cd115733f7c>;rel="application"
-Link: <http://localhost:8080/registry/api/application/253a25ec-7c2c-4ca5-88f6-9cd115733f7c/endpoint/f27efad1-a6a2-4066-af4e-b50a0194f46a>;rel="self"
-----
 
 For applications and endpoints a revision log will be managed.
 This allows to review past changes.
